# Nanochat-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  gen-fixtures.sh
benches/: benchmarks.rs
fixtures/: meta.json  model.pt
fixtures/gpt_logits/: random_01_seed42_len2_batch1.json  random_01_seed42_len2_batch1_topk0.json  random_02_seed42_len4_batch1.json  random_03_seed42_len7_batch1.json  random_04_seed42_len7_batch1.json  random_05_seed42_len5_batch1.json  random_06_seed42_len7_batch1.json  random_07_seed42_len7_batch1.json  random_08_seed42_len5_batch1.json  random_09_seed42_len8_batch1.json  random_10_seed42_len4_batch1.json
fixtures/tokenizer/: known_01.json  known_02.json  known_03.json  known_04.json  known_05.json  known_06.json  known_07.json  known_08.json  known_09.json  known_10.json  known_11.json  known_12.json  known_13.json  known_14.json  known_15.json  random_01_seed42.json  random_02_seed42.json  random_03_seed42.json  random_04_seed42.json  random_05_seed42.json  random_06_seed42.json  random_07_seed42.json  random_08_seed42.json  random_09_seed42.json  random_10_seed42.json
github/workflows/: rust.yml
reference/: README.md  convert_model_format.py  gen_fixtures.py  gen_tokenizer_fixtures.py  pyproject.toml  pyrightconfig.json  util.py
src/: check_points.rs  engine.rs  hf.rs  lib.rs  sampling.rs  tokenizer.rs
src/model/: attention.rs  builder.rs  gpt.rs  kv.rs  loss.rs  mod.rs  ops.rs  rope.rs
tests/: fixture_test.rs
